--- a/forgot-password.html
+++ b/forgot-password.html
@@ -187,7 +187,7 @@
 
     <!-- Supabase SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/supabase-config.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="supabase-config.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
