--- a/forgot-password.html
+++ b/forgot-password.html
@@ -18,7 +18,10 @@
         }
 
         .container {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('iwp project/dashboardbg.jpeg') no-repeat center center fixed;
+            background: linear-gradient(to bottom right, #1f1f1f, #2d7a70);
+/* or */
+background-color: #1f1f1f;
+
             background-size: cover;
             height: 100vh;
             display: flex;
