--- a/mentee-profiles.html
+++ b/mentee-profiles.html
@@ -343,8 +343,8 @@
 
   <!-- Supabase SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="js/supabase-config.js"></script>
-  <script src="js/auth.js"></script>
-  <script src="js/mentee-management.js"></script>
+  <script src="supabase-config.js"></script>
+  <script src="auth.js"></script>
+  <script src="mentee-management.js"></script>
 </body>
 </html>
