--- a/register.html
+++ b/register.html
@@ -18,7 +18,10 @@
     }
 
     .container {
-      background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('iwp project/dashboardbg.jpeg') no-repeat center center fixed;
+      background: linear-gradient(to bottom right, #1f1f1f, #2d7a70);
+/* or */
+background-color: #1f1f1f;
+
       background-size: cover;
       min-height: 100vh;
       display: flex;
@@ -195,7 +198,7 @@
 
     <!-- Supabase SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/supabase-config.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="supabase-config.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
