--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
       <th>Branch</th>
     </tr>
     <tr>
-      <td>2360</td>
+      <td>2360479</td>
       <td>Vidhi Garg</td>
       <td>CSE</td>
     </tr>
@@ -97,18 +97,18 @@
       <td>CSE</td>
     </tr>
     <tr>
-      <td>2360</td>
+      <td>2360314</td>
       <td>Adwait Raj Jain</td>
       <td>CSE</td>
     </tr>
     <tr>
-      <td>2360</td>
-      <td>Bharathan</td>
+      <td>2360350</td>
+      <td>Bharathan K</td>
       <td>CSE</td>
     </tr>
   </table>
 
-  <button class="btn" onclick="window.location.href='index.html'">
+  <button class="btn" onclick="window.location.href='login.html'"">
     Enter Website
   </button>
 </body>
