--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      background: 
+        linear-gradient(rgba(51, 150, 139, 0.4), rgba(51, 150, 139, 0.4)), /* overlay */
+        linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* base gradient */
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      color: #fff;
     }
 
     h1 {
       margin-bottom: 25px;
       font-size: 2rem;
-      color: #00f2fe;
+      color: #33968b;
       text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
     }
 
@@ -44,7 +45,7 @@
     }
 
     th {
-      background-color: rgba(0, 119, 182, 0.9);
+      background-color: #33968b;
       color: #fff;
       font-size: 1.1em;
     }
@@ -54,7 +55,7 @@
     }
 
     tr:hover {
-      background-color: rgba(0, 242, 254, 0.2);
+      background-color: rgba(76, 164, 168, 0.2);
     }
 
     .btn {
@@ -62,17 +63,17 @@
       padding: 12px 28px;
       border: none;
       border-radius: 8px;
-      background-color: #00b4d8;
-      color: white;
+      background-color: #33968b;
+      color: #ffffff;
       font-size: 1em;
       cursor: pointer;
       font-weight: bold;
       transition: 0.3s;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 12px #33968b;
     }
 
     .btn:hover {
-      background-color: #0096c7;
+      background-color: #60a395;
       transform: scale(1.05);
     }
   </style>
@@ -108,7 +109,7 @@
     </tr>
   </table>
 
-  <button class="btn" onclick="window.location.href='login.html'"">
+  <button class="btn" onclick="window.location.href='login.html'">
     Enter Website
   </button>
 </body>
