--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       margin: 0;
       padding: 0;
       background: 
-        linear-gradient(rgba(51, 150, 139, 0.4), rgba(51, 150, 139, 0.4)), /* overlay */
-        linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* base gradient */
+        linear-gradient(rgba(7, 32, 29, 0.4), rgba(19, 60, 56, 0.4)), /* overlay */
+        linear-gradient(135deg, #03201a, #062722, #062f2f); /* base gradient */
       display: flex;
       flex-direction: column;
       align-items: center;
