--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       background: 
         linear-gradient(rgba(7, 32, 29, 0.4), rgba(19, 60, 56, 0.4)), /* overlay */
-        linear-gradient(135deg, #03201a, #062722, #062f2f); /* base gradient */
+        linear-gradient(135deg, #001914, #011d19, #01241d); /* base gradient */
       display: flex;
       flex-direction: column;
       align-items: center;
